--- a/app/views/points/index.erb
+++ b/app/views/points/index.erb
@@ -17,7 +17,7 @@
     </thead>
     <tbody>
     <% @points.limit(100).each do |point| %>
-    <tr>
+    <tr id="user_<%= point.name %>">
       <td><a href="http://www.reddit.com/u/<%= point.name %>"><%= point.name %></a></td>
       <td><%= point.city %></td>
       <td><%= point.county %></td>
@@ -30,5 +30,5 @@
 </div>
 
 <script>
-  var point_data = <%= @markers.to_json.html_safe %>;
+  var point_data = <%= @points.to_json.html_safe %>;
 </script>
