--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,16 +18,16 @@ body {
 
 /* Customize marker cluster display */
 .marker-cluster-small {
-    width: 26px !important;
-    height: 26px !important;
-    margin-left: -13px !important;
-    margin-top: -13px !important;
+    width: 24px !important;
+    height: 24px !important;
+    margin-left: -12px !important;
+    margin-top: -12px !important;
 }
 .marker-cluster-small div {
     width: 18px;
     height: 18px;
-    margin-left: 4px;
-    margin-top: 4px;
+    margin-left: 3px;
+    margin-top: 3px;
 }
 .marker-cluster-small span {
     line-height: 18px;
@@ -51,12 +51,38 @@ body {
     color:white;
 }
 .point-icon {
-    background-color: rgba(120, 10, 10, .8);
-    border-radius: 8px;
-    border: 2px solid white;
+    width: 18px;
+    height: 18px;
+    border-radius: 9px;
+}
+.point-icon div {
+    border-radius: 6px;
+    width: 12px;
+    height: 12px;
+    margin-left: 3px;
+    margin-top: 3px;
 }
 
-.marker-cluster,
+.point-icon div,
 .marker-cluster div {
-    background-color: rgba(120, 10, 10, 0.6);
+    background-color: rgba(120, 0, 0, 0.8);
+}
+.point-icon,
+.marker-cluster {
+    background-color: rgba(215, 50, 50, 0.7);
+}
+.leaflet-container a.leaflet-popup-close-button {
+    display: none;
+}
+.leaflet-popup-content {
+    margin: 5px 12px;
+}
+.leaflet-popup-content-wrapper {
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+}
+.leaflet-popup-content-wrapper,
+.leaflet-popup-tip {
+    color: #ddd;
+    background-color: rgba(20, 20, 20, 0.95);
 }
