Initializing foundation javascript.

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -15,12 +15,12 @@
   <![endif]-->
   <link rel="stylesheet" href="css/MarkerCluster.css" />
   <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
-  <link rel="stylesheet" href="js/vendor/datatables/dataTables.foundation.css" />
+  <link rel="stylesheet" href="css/datatables/dataTables.foundation.css" />
   <!--[if lte IE 8]><link rel="stylesheet" href="css/MarkerCluster.Default.ie.css" /><![endif]-->
   <link rel="stylesheet" href="css/app.css" />
 
 
-  <script src="js/vendor/custom.modernizr.js"></script>
+  <script src="js/src/vendor/custom.modernizr.js"></script>
 
 </head>
 <body>
