Basic IE support and bugfixes.

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
   <link rel="stylesheet" href="css/datatables/dataTables.foundation.css" />
   <link rel="stylesheet" href="css/leaflet/leaflet-minimap.css" />
-  <!--[if lte IE 8]><link rel="stylesheet" href="css/MarkerCluster.Default.ie.css" /><![endif]-->
+  <!--[if lte IE 8]><link rel="stylesheet" href="css/app.ie.css" /><![endif]-->
   <link rel="stylesheet" href="css/app.css" />
 
 
