--- a/app/views/points/index.erb
+++ b/app/views/points/index.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="twelve columns">
   <div class="attribution">Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY SA</a></div>
-  <table class="datatable">
+  <table class="datatable large-12">
     <thead>
     <tr>
       <th width="200">Name</th>
