--- a/app/views/shared/_nav.erb
+++ b/app/views/shared/_nav.erb
@@ -9,7 +9,7 @@
   </ul>
   <section class="top-bar-section">
     <ul class="right">
-      <li class="divider hide-for-small">/li>
+      <li class="divider hide-for-small"></li>
       <li>
         <%= link_to 'Help', url_for(:page, :help) %>
       </li>
