--- a/app/views/shared/_nav.erb
+++ b/app/views/shared/_nav.erb
@@ -2,7 +2,7 @@
 <nav class="top-bar">
   <ul class="title-area">
     <li class="name"><h1>
-      <% link_to 'banana', url_for(:points, :index) do %>
+      <% link_to url_for(:points, :index) do %>
         <%= image_tag '/img/heading.png', alt: "RainbowRaptors text" %>
       <% end %>
     </h1></li>
