--- a/app/views/points/index.erb
+++ b/app/views/points/index.erb
@@ -1,3 +1,4 @@
+<% content_for :js_controller, 'locator' %>
 <div class="row collapse">
   <div class="twelve columns">
     <div class="map" id="map"></div>
