--- a/app/views/page/help.erb
+++ b/app/views/page/help.erb
@@ -3,7 +3,7 @@
 
   <h4>How can I be added to the map?</h4>
   <p>Send a private message to <a href="http://www.reddit.com/message/compose/?to=ALFinder&subject=Register%20me!">/u/alfinder</a> with a mesage containing your location.</p>
-  <img width="400" height="360" src="/img/help/register.png" alt="Example reddit private message form, containing to: alfinder, subject: Register Me!, message: Tokyo, Japan"/>
+  <img width="400" height="360" src="<%= asset_path :img, 'help/register.png' %>" alt="Example reddit private message form, containing to: alfinder, subject: Register Me!, message: Tokyo, Japan"/>
 
   <h4>I've moved! How do I update my location?</h4>
   <p>Send a new message to <a href="http://www.reddit.com/message/compose/?to=ALFinder&subject=Register%20me!">/u/alfinder</a> with your updated location.</p>
